added comments to _posts partial

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -9,4 +9,12 @@
     <%= post.content %>
   </p>
 
+
+    <div>
+      <strong>Comment:</strong>
+    <% post.comments.each do |post| %>
+     <p><%=  post.content %></p>
+    <% end %>
+  </div>
+
 </div>
