--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -10,11 +10,14 @@
   </p>
 
 
-    <div>
-      <strong>Comment:</strong>
+    <div><u>
     <% post.comments.each do |post| %>
+    <strong>Comment:</strong>
      <p><%=  post.content %></p>
+      <%= link_to 'Show comment', post_comments_path(post), action: :show%>
+     <p>By: <%= post.user.email %>
     <% end %>
+    </u> 
   </div>
 
 </div>
