--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Posts</h1>
 
-<div id="posts">
+<div id="posts" class= "container d-flex justify-content-center border-bottom">
   <% @posts.each do |post| %>
     <%= render post %>
     <p>
