added devise views, might change

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id post %>">
+<div id="<%= dom_id post %>" class= "container border-bottom">
   <p>
     <strong>Title:</strong>
     <%= post.title %>
@@ -14,7 +14,7 @@
     <% post.comments.each do |post| %>
     <strong>Comment:</strong>
      <p><%=  post.content %></p>
-      <%= link_to 'Show comment', post_comments_path(post), action: :show%>
+     
      <p>By: <%= post.user.email %>
     <% end %>
     
