--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,17 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Posts</h1>
-
-<div id="posts" class= "container d-flex justify-content-center border-bottom">
-  <% @posts.each do |post| %>
-    <%= render post %>
-    <p>
-      <%= link_to "Show this post", post %>
-      <%= link_to "New comment", new_post_comment_path(post.id) %>
-    </p>
-  <% end %>
+<div class= "container d-flex justify-content-center">
+<div class= "">
+  <p style="color: green"><%= notice %></p>
+  <h1>Posts</h1>
+  <div id="posts" class= "">
+    <% @posts.each do |post| %>
+      <%= render post %>
+      <p>
+        <%= link_to "Show this post", post %>
+        <%= link_to "New comment", new_post_comment_path(post.id) %>
+         <%= link_to 'Show comment', post_comments_path(post), action: :show%>
+      </p>
+    <% end %>
+  </div>
+  <%= link_to "New post", new_post_path %>
+  </div>
 </div>
-
-<%= link_to "New post", new_post_path %>
