--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
     <% end %>
       </li>
       <li>
-      <%= link_to 'New Post', new_post_path, class:"nav-link" %> 
+      <%= link_to 'Posts', posts_path, class:"nav-link" %> 
       </li>
          <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Action</a></li>
