--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
-<div class= "container d-flex justify-content-center">
+<h1 class="container d-flex justify-content-center my-3">Posts</h1>
+<div class= "container d-flex justify-content-left">
 <div class= "">
   <p style="color: green"><%= notice %></p>
-  <h1>Posts</h1>
   <div id="posts" class= "">
     <% @posts.each do |post| %>
       <%= render post %>
