switched to the posts to be in the center

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <h1 class="container d-flex justify-content-center my-3">Posts</h1>
-<div class= "container d-flex justify-content-left">
+<div class= "container d-flex justify-content-center">
 <div class= "">
   <p style="color: green"><%= notice %></p>
   <div id="posts" class= "">
