--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,16 +1,24 @@
-<h1 class="container d-flex justify-content-center my-3">People</h1>
-<div class= "container d-flex justify-content-center">
-<div class= "">
+<div class="container-fluid my-3>
   <p style="color: green"><%= notice %></p>
   <div id="posts" class= "">
+  <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Link</th>
+      <th scope="col">Number</th>
+    </tr>
+  </thead>
+  <tbody>
     <% @people.each do |person| %>
-      <%= render person %>
-      <p>
-         <%= link_to "New person", new_user_person_path %>
-      </p>
+    <tr>
+      <td scope="row"><%= person.first_name %></td>
+      <td scope="row"><%= person.last_name %></td>
+      <td scope="row"> <%= link_to "New person", new_user_person_path %> </td>
+      <td scope="row"></td>
+    </tr>
     <% end %>
-  </div>
-  </div>
-</div>
-
-<%= link_to "New person", new_user_person_path %>
+    </tbody>
+    </table>
+ </div>
