--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -1,8 +1,8 @@
-<div id="<%= dom_id person %>">
-  <p>
-    <strong>Person:</strong>
-    <%= person.first_name%>
-    <%= person.last_name%>
-  </p>
-
-</div>
+<% @people.each do |person| %>
+    <tr>
+      <td scope="row"><%= person.first_name %></td>
+      <td scope="row"><%= person.last_name %></td>
+      <td scope="row"> <%= link_to "New person", new_user_person_path %> </td>
+      <td scope="row"></td>
+    </tr>
+<% end %>
