--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,24 +1,17 @@
 <div class="container-fluid my-3>
   <p style="color: green"><%= notice %></p>
   <div id="posts" class= "">
-  <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Link</th>
-      <th scope="col">Number</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @people.each do |person| %>
-    <tr>
-      <td scope="row"><%= person.first_name %></td>
-      <td scope="row"><%= person.last_name %></td>
-      <td scope="row"> <%= link_to "New person", new_user_person_path %> </td>
-      <td scope="row"></td>
-    </tr>
-    <% end %>
-    </tbody>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">First</th>
+          <th scope="col">Last</th>
+          <th scope="col">Link</th>
+          <th scope="col">Number</th>
+        </tr>
+      </thead>
+      <tbody>
+        <%= render "person" %>
+      </tbody>
     </table>
- </div>
+  </div>
