--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,9 @@
       <li>
       <%= link_to 'Posts', posts_path, class:"nav-link" %> 
       </li>
+      <li>
+      <%= link_to 'Contacts', people_path, class:"nav-link" %> 
+      </li>
          <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Action</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
