--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -2,7 +2,7 @@
     <tr>
       <td scope="row"><%= person.first_name %></td>
       <td scope="row"><%= person.last_name %></td>
-      <td scope="row"> <%= link_to "New person", new_user_person_path %> </td>
+      <td scope="row"> <%= link_to "New person", new_person_path %> </td>
       <td scope="row"></td>
     </tr>
 <% end %>
