--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: ([@user, @user.people.build]) do |form| %>
+<%= form_with model: @person do |form| %>
   
   <div>
     <%= form.label :first_name, style: "display: block" %>
