--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -1,8 +1,9 @@
 <% @people.each do |person| %>
-    <tr>
-      <td scope="row"><%= person.first_name %></td>
-      <td scope="row"><%= person.last_name %></td>
-      <td scope="row"> <%= link_to "New person", new_person_path %> </td>
-      <td scope="row"></td>
-    </tr>
+  <tr>
+    <td scope="row"><%= person.first_name %></td>
+    <td scope="row"><%= person.last_name %></td>
+    <% person.phone_numbers.each do |number| %>
+      <td scope="row"> <%= number.number %></td>
+    <% end %>
+  </tr>
 <% end %>
