--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -1,9 +1,10 @@
 <% @people.each do |person| %>
   <tr>
     <td scope="row"><%= person.first_name %></td>
-    <td scope="row"><%= person.last_name %></td>
+    <td ><%= person.last_name %></td>
     <% person.phone_numbers.each do |number| %>
-      <td scope="row"> <%= number.number %></td>
-    <% end %>
+      <td> <%= number_to_phone(number.number) %></td>
+      <% end %>
+   
   </tr>
 <% end %>
