--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,6 +1,5 @@
 <div class="container-fluid my-3>
   <p style="color: green"><%= notice %></p>
-  <%= link_to "New person", new_person_path %>
   <div id="posts" class= "">
   <table class="table">
   <thead>
@@ -8,6 +7,7 @@
       <th scope="col">First</th>
       <th scope="col">Last</th>
       <th scope="col">Number</th>
+      <th scope="col">Address</th>
     </tr>
   </thead>
   <tbody>
@@ -15,3 +15,5 @@
     </tbody>
     </table>
  </div>
+
+ <%= link_to "New person", new_person_path %>
