fixed the table to display empty space if record does not exist

--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,7 +1,8 @@
-<div class="container-fluid my-3>
+<h1  class="cotainer d-flex justify-content-center my-3 "><u>Contacts</u></h1>
+<div class="container my-3>
   <p style="color: green"><%= notice %></p>
   <div id="posts" class= "">
-  <table class="table">
+  <table class="table justify-content-center">
   <thead>
     <tr>
       <th scope="col">First</th>
