--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: @person do |form| %>
   
-  <div>
+  <div class="form-control">
     <%= form.label :first_name, style: "display: block" %>
     <%= form.text_field :first_name %>
   </div>
