--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -2,11 +2,19 @@
   <tr>
     <td scope="row"><%= person.first_name %></td>
     <td><%= person.last_name %></td>
-    <% person.phone_numbers.each do |number| %>
-      <td> <%= number_to_phone(number.number) %></td>
+    <% if person.phone_numbers.exists? %>
+      <% person.phone_numbers.each do |number| %>
+        <td> <%= number_to_phone(number.number) %></td>
+      <% end %>
+    <% else %>
+      <td> &nbsp; </td>
     <% end %>
-    <% person.addresses.each do |address| %>
-      <td> <%= address.street%> <%= address.city %> <%= address.state %> <%= address.zipcode %> </td>
+    <% if person.addresses.exists? %>
+      <% person.addresses.each do |address| %>
+        <td> <%= address.street%> <%= address.city %> <%= address.state %> <%= address.zipcode %> </td>
+      <% end %>
+    <% else %>
+      <td> &nbsp; </td>
     <% end %>
   </tr>
 <% end %>
