--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,9 @@
       <li>
       <%= link_to 'Profile', profile_index_path, class:"nav-link" %> 
       </li>
+      <li>
+      <%= link_to 'Invoices', invoices_path, class:"nav-link" %> 
+      </li>
          <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Action</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
